configure "add-opens" JVM command args when building Ditto docker connectivity images
Signed-off-by: Thomas Jaeckle <thomas.jaeckle@bosch.io>